on gh-pages :grin:

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="imover">
   <div class="main">
-    <span><i>SHIT HAPPENS, GET OVER IT!</i></span>
+    <span>SHIT HAPPENS, GET OVER IT!</span>
     <button type="button" name="I'm over it" id="overit">I'm over it</button>
   </div>
 
