timerId issue solved

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script type="text/javascript">
     console.log("HE110 CREPPER /(*_*)/");
     var toggle = true;
+    var timerId = null;
     $(document).ready(function() {
       window.setInterval(function() {}, 1000);
     });
